# talp-bdd-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: __init__.py  main.py
app/api/routes/: qa.py
app/chains/: __init__.py  qa_chain.py
app/core/: config.py  evaluation.py  exceptions.py  logging.py
app/prompts/: __init__.py  few_shots.md  repository.py  system.md
app/prompts/few_shots/: qa.md
app/prompts/system/: qa.md
app/prompts/templates/: qa_analysis.md
app/prompts/versions/: qa_v1.md
app/schemas/: bdd.py  qa.py
app/services/: __init__.py  qa_service.py
docs/: prompt-management.md
tests/: __init__.py  conftest.py  test_api.py  test_chains.py  test_schemas.py
tests/evals/: qa_cases.json  test_semantic_evals.py
